AC-3154: Fix vertical align icons in DD list;

--- a/kubedock/frontend/static/css/icons.less
+++ b/kubedock/frontend/static/css/icons.less
@@ -29,7 +29,12 @@
         .mdi('stop',21px, #B5BBC1, #3197EE);
     }
     .terminate-btn{
-        .mdi('delete_sweep',21px, #B5BBC1, #3197EE);
+        .mdi('delete',21px, #B5BBC1, #3197EE);
+        &:hover{
+            &:before{
+                content: 'delete_forever'
+            }
+        }
     }
     .stats-btn{
         .mdi('equalizer',21px, #B5BBC1, #3197EE);
@@ -75,7 +80,7 @@
         }
     }
     .ic_reorder{
-        .mdi('reorder',19px, #646f82, #3197EE);
+        .mdi('reorder',21px, #646f82, #3197EE);
     }
 
     .icon{
