--- a/kubedock/frontend/static/css/main.less
+++ b/kubedock/frontend/static/css/main.less
@@ -759,7 +759,7 @@ body{
                         display: block;
                         color: #646f82;
                         font-weight: 400;
-                        padding: 5px 20px;
+                        padding: 5px 22px;
                         line-height: 20px;
                         white-space: nowrap;
                         &:hover{
@@ -1720,6 +1720,7 @@ body{
 /* dropdown animation */
 .open > .dropdown-menu {
     .transform(scale(1, 1));
+    .opacity(1);
 }
 .dropdown-menu {
     .transform-origin(top);
@@ -1727,7 +1728,8 @@ body{
     animation-fill-mode: forwards;
     .transform(scale(1, 0));
     display: block;
-    .transition(all 0.3s ease-out)
+    .opacity(0);
+    .transition(all 300ms ease-in-out);
 }
 .dropup .dropdown-menu {
     .transform-origin(bottom);
